--- a/src/Restaurant.Auth/Restaurant.Auth.Service/Restaurant.Auth.Service.csproj
+++ b/src/Restaurant.Auth/Restaurant.Auth.Service/Restaurant.Auth.Service.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\Restaurant.Auth.UseCases\Restaurant.Auth.UseCases.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
