get profile controller + repository GetByName fix

--- a/src/Restaurant.Auth/Restaurant.Auth.Service/appsettings.json
+++ b/src/Restaurant.Auth/Restaurant.Auth.Service/appsettings.json
@@ -12,5 +12,5 @@
     "Salt": "gnbkIzYEX1qG8UWrqmjB5S9jnsSeSHpf"
   },
 
-  "ConnectionString": "host=localhost;database=Restaurant;username=admin;password=admin"
+  "ConnectionString": "host=localhost;database=Restaurant;username=postgres;password=popmenlal"
 }
